--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,11 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.3
+Date: 2021-02-25
+
+  Minor Features:
+    - Update Factorio version so the mod can be used on Factorio 1.1
+
+---------------------------------------------------------------------------------------------------
 Version: 1.0.2
 Date: 2020-12-21
 
