--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.6
+Date: 2022-07-18
+
+  Bugfixes:
+    - Fixed unhandled exception that sometime caused errors in clearing the GUI  (contributor: Christian Moller Nielsen)    
+---------------------------------------------------------------------------------------------------
 Version: 1.0.5
 Date: 2022-06-16
 
